<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    tools:context="com.googleplaystore.kidusmt.dynamicsassignment.AnswerActivity">


    <TextView
        android:id="@+id/analytic_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/answer_topic"
        android:textAlignment="center"
        android:textColor="#234234"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/given_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/analytic_results"
        android:layout_marginBottom="5dp"
        android:text="@string/given"
        android:textColor="#123123"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/material_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/given_result"
        android:layout_marginBottom="5dp"
        android:text="@string/material_type" />


    <TextView
        android:id="@+id/load_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_volume"
        android:layout_below="@+id/material_type"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/lift_force"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/load_volume"
        android:layout_marginBottom="5dp"
        android:text="@string/lift_force" />

    <TextView
        android:id="@+id/lift_force_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/load_volume"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/lift_force"
        android:text="@string/lift_force_lable" />

    <TextView
        android:id="@+id/lift_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lift_force"
        android:layout_marginBottom="5dp"
        android:text="@string/lift_time" />

    <TextView
        android:id="@+id/lift_time_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lift_force"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/lift_time"
        android:text="@string/lift_time" />


    <TextView
        android:id="@+id/max_lift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calculated_result"
        android:layout_marginBottom="5dp"
        android:text="@string/max_lift" />

    <TextView
        android:id="@+id/load_unload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/max_lift"
        android:layout_marginBottom="5dp"
        android:text="@string/load_unload_result" />

    <TextView
        android:id="@+id/load_unload_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/max_lift"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@+id/load_unload"
        android:paddingLeft="10dp"
        android:text="@string/max_lift" />

    <TextView
        android:id="@+id/conclusion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="5dp"
        android:text="@string/conclusion"
        android:textColor="#123123"
        android:textSize="17dp"
        android:layout_below="@+id/load_unload"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/conclusion_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conclusion"
        android:layout_marginBottom="5dp"
        android:text="@string/answer_conclusion" />

    <TextView
        android:id="@+id/material_type_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/material_type_result"
        android:layout_below="@id/given_result"
        android:layout_toRightOf="@+id/material_type" />

    <TextView
        android:id="@+id/calculated_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/calculated_result"
        android:textColor="#123123"
        android:textSize="17dp"
        android:layout_below="@+id/lift_time"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/max_lift_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/max_lift"
        android:layout_alignBaseline="@+id/max_lift"
        android:layout_alignBottom="@+id/max_lift"
        android:layout_toEndOf="@+id/material_type" />

    <TextView
        android:id="@+id/load_volume_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/loadvolumeresults"
        android:layout_below="@+id/material_type"
        android:layout_alignStart="@+id/lift_force_results" />


</RelativeLayout>