<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splash_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEFF1"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.googleplaystore.kidusmt.dynamicsassignment.Splash">

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:src="@drawable/aait_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/aait"
        android:textSize="18dp"
        android:textColor="#000"
        android:layout_centerInParent="true"
        android:text="Addis Ababa Institute of Technology"
        android:layout_below="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_margin="5dp"
        android:id="@+id/aait_ab"
        android:textSize="18dp"
        android:textColor="#000"
        android:layout_centerInParent="true"
        android:text="AAiT"
        android:layout_below="@+id/aait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/department"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:layout_below="@+id/aait_ab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="5dp"
            android:textSize="15dp"
            android:textColor="#234234"
            android:gravity="center"
            android:text="Dynamics Final Project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginLeft="10dp"
            android:textColor="#234234"
            android:text="@string/department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:text="By:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout

        android:orientation="vertical"
        android:layout_below="@id/department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:paddingLeft="40dp"
            android:text="@string/developer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingLeft="40dp"
            android:text="@string/developer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />

        <TextView
            android:paddingLeft="40dp"
            android:text="@string/developer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingLeft="40dp"
            android:text="@string/developer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingLeft="40dp"
            android:text="@string/developer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:paddingRight="15dp"
        android:gravity="end"
        android:layout_above="@+id/instractor"
        android:text="@string/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="18dp"
        android:textColor="#112357"
        android:id="@+id/instractor"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/instructor"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>