<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.googleplaystore.kidusmt.dynamicsassignment.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/question"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:textColor="#123"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question" />

        <Switch
            android:text="Stop-Animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="10px"
            android:id="@+id/animation_toggle" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/animation"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="5dp"
            android:text="@string/requeired"
            android:fontFamily="sans-serif"
            android:textColor="#123122"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/material_type_spinner"
            android:entries="@array/material_types"
            android:prompt="@string/country_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <EditText
            android:hint="Load Mass (Kg)"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/load_mass" />

        <Spinner
            android:id="@+id/lift_force_spinner"
            android:entries="@array/volume_amount"
            android:prompt="@string/country_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <EditText
            android:hint="Lift Time (Sec)"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/lift_time" />

        <Button
            android:id="@+id/bt_calculate"
            android:text="Calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bt_graph"
            android:text="Graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:id="@+id/control_button"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/lift_up"
                android:text="+"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/lift_down"
                android:text="-"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/control_button"
            android:id="@+id/animation_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true" />

        </LinearLayout>

    </RelativeLayout>
    </RelativeLayout>
    </ScrollView>

</RelativeLayout>
